--- a/listings-app/src/components/listing.css
+++ b/listings-app/src/components/listing.css
@@ -1,16 +1,23 @@
 * {
   box-sizing: border-box;
 }
+body {
+  display: grid;
+  place-items: center;
+}
 .listing {
-  width: auto;
-  margin: 5px;
-  padding: 5px;
-  font-size: 20px;
+  width: 75vw;
+  margin: auto;
+  padding: 25px;
+  /* font-size: 20px; */
   text-align: center;
-  border: 1px solid #aaa;
+  border: 1px solid hsl(0, 0%, 67%);
   border-radius: 10px;
   background: #fff;
   color: #aaa;
+  border-radius: 38px;
+  background: linear-gradient(145deg, #fff, #eeeeee);
+  box-shadow: 10px 10px 40px #8b8b8b, -10px -10px 40px #ffffff;
 }
 .image {
   width: 75%;
